made metadata changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pingpong",
+  "name": "ping-pong-bracket",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://vritant24.github.io/PingPongBrackets",
